# Mensara

./: .gitignore  .pylintrc  README.md  mensara.yaml  pyproject.toml
src/mensara/: __init.py__  cli.py  config.py  unit.py  units.py
src/mensara/formulas/: __init.py__  flow.py  pressure.py  weight.py
src/mensara/models/: __init.py__  pipe_flow.py  pipe_geometry.py  pipe_pressure.py
tests/: test_convert.py  test_flow.py  test_pressure.py  test_weight.py
